[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Shop.gd" type="Script" id=1]
[ext_resource path="res://Font/tenderness.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.776471, 0.737255, 0.607843, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.27451, 0.25098, 0.180392, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0
shadow_color = Color( 0, 0, 0, 0.690196 )
shadow_size = 3
shadow_offset = Vector2( 2, 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="Shop" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 800.0
margin_bottom = 600.0
color = Color( 0.603922, 0.690196, 0.541176, 1 )

[node name="Buttons" type="Node" parent="."]

[node name="Return" type="Button" parent="Buttons"]
margin_left = 207.0
margin_top = 462.0
margin_right = 370.0
margin_bottom = 512.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Return"

[node name="Buy_1" type="Button" parent="Buttons"]
margin_left = 62.0
margin_top = 299.0
margin_right = 225.0
margin_bottom = 349.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Equip_1"

[node name="Price" type="Label" parent="Buttons/Buy_1"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Money: 100"

[node name="Buy_2" type="Button" parent="Buttons"]
margin_left = 317.0
margin_top = 258.0
margin_right = 480.0
margin_bottom = 308.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Equip_2"

[node name="Price" type="Label" parent="Buttons/Buy_2"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Money: 200"

[node name="Buy_3" type="Button" parent="Buttons"]
margin_left = 542.0
margin_top = 313.0
margin_right = 705.0
margin_bottom = 363.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Equip_3"

[node name="Price" type="Label" parent="Buttons/Buy_3"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Money: 300"

[node name="HUD" type="Node" parent="."]

[node name="Level" type="Label" parent="HUD"]
margin_left = 15.0
margin_top = 11.0
margin_right = 77.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Level: 00"

[node name="HP" type="Label" parent="HUD"]
margin_left = 17.0
margin_top = 30.0
margin_right = 79.0
margin_bottom = 44.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "HP: 100"

[node name="Money" type="Label" parent="HUD"]
margin_left = 16.0
margin_top = 47.0
margin_right = 91.0
margin_bottom = 61.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Money: 000"

[node name="EXP" type="Label" parent="HUD"]
margin_left = 16.0
margin_top = 65.0
margin_right = 91.0
margin_bottom = 79.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "EXP: 000"

[node name="Damage" type="Label" parent="HUD"]
margin_left = 16.0
margin_top = 83.0
margin_right = 91.0
margin_bottom = 97.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Damage: 000"

[connection signal="pressed" from="Buttons/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="Buttons/Buy_1" to="." method="_on_Buy_1_pressed"]
[connection signal="pressed" from="Buttons/Buy_2" to="." method="_on_Buy_2_pressed"]
[connection signal="pressed" from="Buttons/Buy_3" to="." method="_on_Buy_3_pressed"]
